# Genote

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  config.toml.example
.github/workflows/: release.yml
src/: main.rs
